<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CapturarClicDeUnBoton"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/head"
        android:layout_gravity="center"
        android:textSize="30sp"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="362dp"
        android:layout_height="101dp"
        android:layout_marginTop="28dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/cb" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tv1"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"
         />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:hint="0"
        android:inputType="phone"
        android:layout_marginLeft="30dp"
         />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv2"
        android:layout_marginLeft="30dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:hint="0"
        android:inputType="phone"
        android:layout_marginLeft="30dp"/>

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="Sumar"
        android:text="@string/btnSumar"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/resul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/resul"
        android:textSize="22sp"
        android:layout_marginLeft="30dp"
        />

</LinearLayout>